# mofnet

./: .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  INSTALLATION.md  LICENSE  MANIFEST.in  MOFNet-v3.0.0.apk  MOFNet_Clinical_v3.apk  Multi-organ failure (MOF).docx  README.md  example_usage.py  index (1).html  index.html  index2.html  index3.html  interactive_cli.py  interactive_cli_extended.py  manifest.json  ml_example.py  pyproject.toml  register-sw.html  requirements.txt  requirements_simple.txt  service-worker.js  setup.py  test_extended_comprehensive.py  update_setup.sh  verify_installation.py  مثال_استخدام.py
.backup_cleanup_20260108/: icon-192.png.base64
docs/: Gemfile  MOFNet.docx  _config.yml  api_reference.md  clinical_protocols.md  index.md  index.md.backup  installation.md  manifest.json  pwa-installer.js  quickstart.md  service-worker.js  theoretical_foundation.md
docs/download/: Ffffff  MOFNet v2.apk  MOFNet.msixbundle  MOFNet_Clinical_v2.apk  MOFNet_Clinical_v3.apk
download/: MOFNet_Clinical_Analyzer.apk
examples/: basic_usage.py  my_analysis.py  realtime_monitoring.py  requirements.txt  retrospective_analysis.py  visualization_demo.py
mofnet/: __init__.py  extended.py  simple_predictor.py  termux_ml.py
mofnet.egg-info/: PKG-INFO  SOURCES.txt
web_interfaces/: extended_dashboard.py  web_app.py
