[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mofnet"
version = "1.0.2"
authors = [
    {name = "Samir Baladi", email = "emerladcompass@gmail.com"}
]
description = "Multi-Organ Failure Network - Clinical Prediction System"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/emerladcompass/mofnet"
"Bug Tracker" = "https://github.com/emerladcompass/mofnet/issues"
